/**
 * CA contract.
 */
syntax = "proto3";

package daily_limit_rule_dto;

import "aelf/core.proto";

message ConfigureInput {
  aelf.Address manager = 1;
  string symbol = 2;
  uint64 limit = 3;
}
